--- a/home.html
+++ b/home.html
@@ -51,5 +51,5 @@
         <div id="mynews"></div>
         
 </body>
-<script src="../home.js" ></script>
+<script src="..\CodingEvalution\home.js" ></script>
 </html>
