--- a/home.html
+++ b/home.html
@@ -34,6 +34,35 @@
                         font-size: 25px;
                 }
 
+        /* news cont */
+        #mynews{
+                width: 70%;
+                margin: 100px auto;
+                
+        }
+        .News_cont{
+                display: flex;
+                border: 2px solid #BDBDBD;
+                margin: 10px;
+                border-radius: 20px;
+        }
+        .News_cont img{
+                width:100%;
+        }
+        .News_cont div{
+                width:30%;
+                margin:1%;
+                /* border: 2px solid #BDBDBD; */
+        }
+
+        .News_cont div:nth-child(1){
+                /* border: 1px solid red; */
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+        }
+
+
         </style>
        
 </head>
@@ -41,6 +70,7 @@
         <nav>
                 <div><a href="#">NEWSADDA</a></div>
                 <div id="about">
+                        <div><a href="..\CodingEvalution\search.html" target="blank">Search</a></div>
                         <div><a href="#">About</a></div>
                         <div><a href="#">Contact</a></div>
                 </div>
