clicked news added to local storage

--- a/home.html
+++ b/home.html
@@ -45,6 +45,7 @@
                 border: 2px solid #BDBDBD;
                 margin: 10px;
                 border-radius: 20px;
+                cursor: pointer;
         }
         .News_cont img{
                 width:100%;
