--- a/search.html
+++ b/search.html
@@ -70,6 +70,7 @@
                 border: 2px solid #BDBDBD;
                 margin: 10px;
                 border-radius: 20px;
+                cursor:pointer
         }
         .News_cont img{
                 width:100%;
@@ -90,7 +91,7 @@
 </head>
 <body>
         <nav>
-                <div><a href="#">NEWSADDA</a></div>
+                <div><a href="..\CodingEvalution\home.html">NEWSADDA</a></div>
                 <div id="about">
                         <div><a href="..\CodingEvalution\search.html" target="blank">Search</a></div>
                         <div><a href="#">About</a></div>
